src/test/ui/issues/issue-17405.stderr
error[E0574]: expected struct, variant or union type, found enum `Foo`
  --> $DIR/issue-17405.rs:17:9
   |
LL |         Foo { i } => () //~ ERROR expected struct, variant or union type, found enum `Foo`
   |         ^^^ not a struct, variant or union type

error: aborting due to previous error

For more information about this error, try `rustc --explain E0574`.
